# dcsort

./: .gitignore  CMakeLists.txt
src/: .color_coded  .ycm_extra_conf.py  dcmessage.cpp  dcmessage.h  dcsort.cpp  dcsort.h  dcsort.qrc  dcsort.ui  dcvremya.cpp  dcvremya.h  main.cpp
