if(CMAKE_COMPILER_IS_GNUCXX)
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}-std=c++11")
endif()

cmake_minimum_required(VERSION 3.0.0)
cmake_policy(SET CMP0020 NEW)

SET(CMAKE_AUTOMOC ON)
SET(CMAKE_BINARY_DIR bin)
SET(CMAKE_INCLUDE_CURRENT_DIR ON)
FIND_PACKAGE(Qt5Widgets REQUIRED)

SET (PROJECT		"sort")

FILE(GLOB HEADERS	"src/*.h")
FILE(GLOB SOURCES	"src/*.cpp")
FILE(GLOB FORMS		"src/*.ui")
FILE(GLOB RESOURCES	"src/*.qrc")

QT5_WRAP_UI(UI_HEADERS ${FORMS})
QT5_ADD_RESOURCES(QRC_RESOURCES ${RESOURCES})

ADD_EXECUTABLE (${PROJECT} WIN32 ${HEADERS} ${SOURCES} ${UI_HEADERS} ${QRC_RESOURCES})
QT5_USE_MODULES(${PROJECT} Widgets Sql)

# cmake -G "MinGW Makefiles" -DCMAKE_BUILD_TYPE=Debug ..
